  slots to ``view/master.pt``

- Bugfix: Simplify 404 page, no longer crash when authenticated

- Change: simplify `kotti.util.LinkBase.selected()`: use request.view_name
  instead of deriving the view name from request.url. Also, consider the View
  editor bar entry as selected even when the url doesn't end with a slash '/'

- Feature: add Czech translation.

1.3.0 - 2016-10-10
------------------

Breaking Changes
~~~~~~~~~~~~~~~~

- Upgrade to ``repoze.workflow==1.0b``.  **If your application has a custom
  ``workflow.zcml``, it needs a little modification: ``state`` and
  ``transition`` titles are no longer ``key`` nodes, but attributes on the
  respective ``state`` or ``transition`` nodes.  See Kotti's ``workflow.zcml``
  for an example.**

Features and Fixes
~~~~~~~~~~~~~~~~~~

- Add a fallback in ``contents.pt`` when ``creation_date`` or
  ``modification_date`` is ``None``.

- Transform workflow state title to TranslationStrings without eval and
  deprecate it.

- Replace some Python 2 only code with equivalents that also support Python 3.

- Use generic SQLAlchemy type Text as base type for JsonType. This allows
  SQLAlchemy to map Text type to the most suitable type available on given
  database system. Previously used TEXT type is not available in Oracle
  database. In case of existing installation of Kotti with database system,
  for which SQLAlchemy maps generic Text type to type different than TEXT it's
  necessary to either convert existing columns "nodes._acl" and
  "nodes.annotations" to that type or configure SQLAlchemy to map generic Text
  type to existing type of these two columns. For example of how to do this
  please see http://stackoverflow.com/a/36506666/95735. For all database
  systems for which SQLAlchemy provides dialects except Oracle (Firebird,
  Microsoft SQL Server, MySQL, Postgres, SQLite, Sybase) there's no need to
  do anything.

- We use PEP 440 normalized form for the project's version thus current