@@ -10,11 +10,11 @@ python:
 #  - "2.6"
 env:
   - KOTTI_TEST_DB_STRING=postgresql://postgres@localhost:5432/kotti_testing
-  - KOTTI_TEST_DB_STRING=mysql+oursql://root@localhost:3306/kotti_testing
+  - KOTTI_TEST_DB_STRING=mysql+mysqldb://root@localhost:3306/kotti_testing
   - KOTTI_TEST_DB_STRING=sqlite://
 install:
   - travis_retry pip install -U pip wheel setuptools
-  - travis_retry pip install psycopg2 oursql python-coveralls codecov
+  - travis_retry pip install psycopg2 mysqlclient python-coveralls codecov
   - travis_retry pip install -e . -r requirements.txt
   - pip uninstall -y Kotti
   - python setup.py develop
