@@ -9,11 +9,11 @@ python:
   - "2.7"
 env:
   - KOTTI_TEST_DB_STRING=postgresql://postgres@localhost:5432/{{package}}_testing
-  - KOTTI_TEST_DB_STRING=mysql+oursql://root@localhost:3306/{{package}}_testing
+  - KOTTI_TEST_DB_STRING=mysql+mysqldb://root@localhost:3306/{{package}}_testing
   - KOTTI_TEST_DB_STRING=sqlite://
 install:
   - travis_retry pip install -U pip wheel setuptools
-  - travis_retry pip install psycopg2 oursql python-coveralls codecov
+  - travis_retry pip install psycopg2 mysqlclient python-coveralls codecov
   - pip install -e . -r https://raw.github.com/Kotti/Kotti/stable/requirements.txt
   - pip install --pre Kotti
   - python setup.py devbefore_script:
