@@ -1,17 +1,17 @@
 [pytest]
 addopts =
+    --capture=no
+    --cov=kotti
+    --cov-config .coveragerc
+    --cov-report=term-missing
     --doctest-modules
     --doctest-glob='*.txt'
     --ignore=kotti/templates/
-    --capture=no
+#    --pep8
     --strict
-    --pep8
     --tb=native
-    --cov=kotti
-    --cov-report=term-missing
     --travis-fold=auto
-
-    kotti/
+    kotti/tests
 python_files = test_*.py
 pep8ignore = E501 E122 E123 E125 E128 E711 E713 E714 E402
 markers =
