@@ -31,6 +31,16 @@ Change History
 
 - Feature: add Czech translation.
 
+- Switch from ``oursql``to ``mysqlclient`` in tests.
+
+- Temporarily disable ``pep8`` tests, as they cause problems with recent
+  ``pytest`` versions.
+
+- Setup tests on TravisCI with ``pip install -e .[testing]``, making
+  ``requirements.txt`` obsolete.
+
+-  Adjust CLI command tests for new versions of ``Pyramid`` / ``plaster``.
+
 1.3.0 - 2016-10-10
 ------------------
 
